--- a/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
+++ b/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
@@ -1,12 +1,12 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Detail Verifikasi Misi'"></page-content-header>
+  <page-content-header contentTitle="{{'global.label.detail_entity' | translate:titleParam}}"></page-content-header>
   <!-- / HEADER -->
 
   <div class="content p-24" *ngIf="!onLoad">
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column" fusePerfectScrollbar>
       <div class="px-24" fxLayout="row" fxLayoutAlign="space-between center">
-        <h2>Detail Verifikasi Misi</h2>
+        <h2>{{'global.label.detail_entity' | translate:titleParam}}</h2>
         <!-- <div *ngIf="dataScheduler['audience']">
             <button *ngIf="permission?.lihat" mat-button style="border: 1px solid; margin-right: 10px"
               (click)="export()">
@@ -24,14 +24,14 @@
         <form autocomplete="off">
           <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <input matInput type="text" placeholder="Nama Pengatur Jadwal Program Dagang"
+              <input matInput type="text" placeholder="{{'dte.pengatur_jadwal_program.text16' | translate}}"
                 [value]="dataScheduler['name']" name="name" disabled>
             </mat-form-field>
           </div>
 
           <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <mat-select [value]="dataScheduler['trade_creator_id']" placeholder="Trade Program"
+              <mat-select [value]="dataScheduler['trade_creator_id']" placeholder="{{'dte.trade_program.text1' | translate}}"
                 name="trade_creator_id" disabled>
                 <mat-option *ngFor="let item of listTradeProgram" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -42,14 +42,14 @@
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                <strong>Audience</strong>
+                <strong>{{'dte.audience.text1' | translate}}</strong>
               </h3>
             </div>
             <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="text" placeholder="Audience / Grup" [value]="dataScheduler['audience'].name"
+                <input matInput type="text" placeholder="{{'dte.task_verification.audience_group' | translate}}" [value]="dataScheduler['audience'].name"
                   disabled>
-                <button mat-button matTooltip="Lihat daftar audience"
+                <button mat-button matTooltip="{{'dte.task_verification.view_list_audience' | translate}}"
                   (click)="openListAudience(dataScheduler['audience'])" matSuffix mat-icon-button>
                   <mat-icon class="s-24">view_list</mat-icon>
                 </button>
@@ -61,16 +61,16 @@
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                <strong>Estimasi Budget</strong>
+                <strong>{{'dte.pengatur_jadwal_program.text17' | translate}}</strong>
               </h3>
             </div>
             <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="text" placeholder="Permintaan Dana"
+                <input matInput type="text" placeholder="{{'dte.pengatur_jadwal_program.text18' | translate}}"
                   [value]="dataScheduler['budget_request'] | rupiahFormater" disabled>
               </mat-form-field>
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="text" placeholder="Dana Trade Program"
+                <input matInput type="text" placeholder="{{'dte.trade_program.text4' | translate}}"
                   [value]="dataScheduler['budget_trade_program'] | rupiahFormater" disabled>
               </mat-form-field>
             </div>
@@ -80,37 +80,37 @@
             <div>
               <div class="py-2 template-task" fxLayout="row" fxLayoutAlign="space-between center">
                 <div fxFlex="20">
-                  <h3 class="">Template Tugas</h3>
+                  <h3 class="">{{'dte.template_tugas.text1' | translate}}</h3>
                 </div>
                 <div fxFlex="80" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column"
                   fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
                   <h3>
                     <mat-slide-toggle disabled [checked]="dataScheduler.is_verification_hq == 1 ? true : false">
-                      Verifikasi Oleh HQ</mat-slide-toggle>
+                      {{'dte.pengatur_jadwal_program.text21' | translate}}</mat-slide-toggle>
                   </h3>
                   <h3>
-                    <mat-slide-toggle disabled [checked]="dataScheduler.is_verification_toggle">Perlu Verifikasi
+                    <mat-slide-toggle disabled [checked]="dataScheduler.is_verification_toggle">{{'dte.pengatur_jadwal_program.text22' | translate}}
                     </mat-slide-toggle>
                   </h3>
                   <h3>
-                    <mat-slide-toggle disabled [checked]="dataScheduler.is_verification">Push to FF?</mat-slide-toggle>
+                    <mat-slide-toggle disabled [checked]="dataScheduler.is_verification">{{'dte.pengatur_jadwal_program.text23' | translate}}?</mat-slide-toggle>
                   </h3>
                 </div>
               </div>
               <div fxLayout="row wrap" fxLayout.lt-md="column" class="p-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
-                  <input matInput type="text" placeholder="Template Tugas" [value]="dataScheduler.task_template_name"
+                  <input matInput type="text" placeholder="{{'dte.template_tugas.text1' | translate}}" [value]="dataScheduler.task_template_name"
                     disabled>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="22%" class="is-light form-primary">
                   <input matInput type="text" min="0" [value]="dataScheduler.coin_delivered"
-                    placeholder="Nilai Coin Tugas Terkirim" disabled>
+                    placeholder="{{'dte.pengatur_jadwal_program.text19' | translate}}" disabled>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="22%" class="is-light form-primary">
                   <input matInput type="text" min="0" [value]="dataScheduler.coin_approved"
-                    placeholder="Nilai Coin Tugas Disetujui" disabled>
+                    placeholder="{{'dte.pengatur_jadwal_program.text20' | translate}}" disabled>
                 </mat-form-field>
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
                   <input matInput type="text" [value]="dataScheduler.start_date | dateToMoment"
@@ -126,33 +126,33 @@
             </div>
             <div *ngIf="dataScheduler.backup">
               <mat-divider style="border-top-style: dashed"></mat-divider>
-              <h3 class="px-24 text-bold">Backup Task</h3>
+              <h3 class="px-24 text-bold">{{'dte.pengatur_jadwal_program.text37' | translate}}</h3>
               <mat-divider style="border-top-style: dashed"></mat-divider>
 
               <div class="p-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="25px" fxLayoutGap.lt-md="0px"
                 fxLayoutAlign="start end">
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
-                  <input matInput type="text" placeholder="Template Tugas (Backup)" [value]="dataScheduler.backup?.name"
+                  <input matInput type="text" placeholder="{{'dte.task_verification.template_task_backup' | translate}}" [value]="dataScheduler.backup?.name"
                     disabled>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="22%" class="is-light form-primary">
                   <input matInput type="text" min="0" [value]="dataScheduler.backup?.coin_delivered"
-                    placeholder="Nilai Coin Tugas Terkirim (Backup)" disabled>
+                    placeholder="{{'dte.pengatur_jadwal_program.text19' | translate}} ({{'dte.task_verification.backup' | translate}})" disabled>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="22%" class="is-light form-primary">
                   <input matInput type="text" min="0" [value]="dataScheduler.backup?.coin_approved"
-                    placeholder="Nilai Coin Tugas Disetujui (Backup)" disabled>
+                    placeholder="{{'dte.pengatur_jadwal_program.text20' | translate}} ({{'dte.task_verification.backup' | translate}})" disabled>
                 </mat-form-field>
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
                   <input matInput type="text" [value]="dataScheduler.backup?.start_date | dateToMoment"
-                    placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} (Backup)" disabled>
+                    placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} ({{'dte.task_verification.backup' | translate}})" disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
                 <mat-form-field fxFlex="47%" class="is-light form-primary">
                   <input matInput type="text" [value]="dataScheduler.backup?.end_date | dateToMoment"
-                    placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} (Backup)" disabled>
+                    placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} ({{'dte.task_verification.backup' | translate}})" disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
               </div>
@@ -245,19 +245,19 @@
           <div fxLayout="row wrap" fxLayoutAlign="start stretch" fxLayout.lt-md="column" class="p-16" fxLayoutGap="20px"
             fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Status Misi" [(ngModel)]="statusValue" name="statusValue"
+              <mat-select placeholder="{{'dte.task_verification.mission_status' | translate}}" [(ngModel)]="statusValue" name="statusValue"
                 [ngModelOptions]="{standalone: true}" multiple>
                 <mat-option [value]="wtLoop.value" *ngFor="let wtLoop of status"> {{wtLoop.label}} </mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Status Coin" [(ngModel)]="statusCoinSelected" name="statusCoinSelected"
+              <mat-select placeholder="{{'dte.task_verification.text8' | translate}}" [(ngModel)]="statusCoinSelected" name="statusCoinSelected"
                 [ngModelOptions]="{standalone: true}" multiple>
                 <mat-option [value]="scl.value" *ngFor="let scl of statusCoinList"> {{scl.label}} </mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="IR Check" [(ngModel)]="irCheckSelected" name="irCheckSelected"
+              <mat-select placeholder="{{'dte.task_verification.ir_check' | translate}}" [(ngModel)]="irCheckSelected" name="irCheckSelected"
                 [ngModelOptions]="{standalone: true}" multiple>
                 <mat-option [value]="icl.value" *ngFor="let icl of irCheckList"> {{icl.label}} </mat-option>
               </mat-select>
@@ -275,26 +275,26 @@
             [rowHeight]="'auto'" [reorderable]="reorderable" [selected]="selected" [count]="pagination.total"
             [limit]="pagination.per_page" [externalPaging]="true" [selectAllRowsOnPage]="false" [externalSorting]="true"
             (select)="onSelect($event)" fusePerfectScrollbar> -->
-            <ngx-datatable-column name="Retailer Id" prop="id" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.retailer_id' | translate}}" prop="id" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.customer_code' | translate}}" prop="code" [sortable]="false"></ngx-datatable-column>
             <!-- <ngx-datatable-column name="No Hp" prop="nomor_hp" [sortable]="false"></ngx-datatable-column> -->
-            <ngx-datatable-column name="Nama Retailer" prop="name"></ngx-datatable-column>
-            <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Division" prop="division_code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="IR Check" prop="ir_verification" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Status Misi" prop="status_misi" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Status Coin" prop="status_coin" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Tanggal Submit Misi" [sortable]="false" [width]="180">
+            <ngx-datatable-column name="{{'dte.approval_coin_adjustment.retailer_name' | translate}}" prop="name"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'global.area.area' | translate}}" prop="area_code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'global.area.regional' | translate}}" prop="region_code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.division' | translate}}" prop="division_code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.ir_check' | translate}}" prop="ir_verification" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.mission_status' | translate}}" prop="status_misi" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.text8' | translate}}" prop="status_coin" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{'dte.task_verification.submit_mission_date' | translate}}" [sortable]="false" [width]="180">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <span *ngIf="row.tgl_submit_misi !== null">{{row.tgl_submit_misi.date | date: 'dd/MM/yyy HH:mm'}}
-                  WIB</span>
+                  {{'dte.task_verification.wib' | translate}}</span>
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Action" [sortable]="false">
+            <ngx-datatable-column name="{{'global.label.action' | translate}}" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
-                  <button type="button" mat-icon-button matTooltip="Verifikasi Misi"
+                  <button type="button" mat-icon-button matTooltip="{{'dte.task_verification.text2' | translate}}"
                     (click)="openConfirmDialog(row, 'Verifikasi Misi')"
                     [disabled]="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim' || !permissionVerifikasiMisi?.ubah">
                     <mat-icon
@@ -305,7 +305,7 @@
                       class="secondary-text">assignment_turned_in</mat-icon>
                   </button>
 
-                  <button type="button" mat-icon-button matTooltip="Release Coin"
+                  <button type="button" mat-icon-button matTooltip="{{'dte.task_verification.coin_release' | translate}}"
                     (click)="openConfirmDialog(row, 'Release Coin')"
                     [disabled]="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim' || !permissionReleaseCoin?.ubah">
                     <mat-icon
