--- a/src/app/shared/target-area/target-area.component.html
+++ b/src/app/shared/target-area/target-area.component.html
@@ -135,7 +135,7 @@
       </ng-template>
     </ngx-datatable-column>
     <ngx-datatable-column
-      name="Code"
+      name="{{'global.label.code' | translate}}"
       prop="code"
       [sortable]="false"
     ></ngx-datatable-column>
