--- a/src/app/pages/dte/template/create/template-create.component.scss
+++ b/src/app/pages/dte/template/create/template-create.component.scss
@@ -346,3 +346,12 @@
   max-width: 640px;
   min-height: 150px;
 }
+
+#upc-container{
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#inputUPC{
+  width: 20%;
+}
