--- a/src/app/pages/dte/mission-builder/duplicate/mission-builder-duplicate.component.html
+++ b/src/app/pages/dte/mission-builder/duplicate/mission-builder-duplicate.component.html
@@ -193,7 +193,7 @@
         <div fxFlex="45">
           <mat-card style="padding: 0px;">
             <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
-              <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Budget Used : </div>
+              <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">{{'dte.task_sequencing.text3' | translate}} : </div>
               <div fxFlex="40" class="h2">{{ ls.locale.global.currency_code }} {{task.total_budget}}</div>
             </div>
           </mat-card>
@@ -201,7 +201,7 @@
         <div fxFlex="45">
           <mat-card style="padding: 0px;">
             <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
-              <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Week Duration : </div>
+              <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">{{'dte.task_sequencing.text4' | translate}} : </div>
               <div fxFlex="40" class="h2">{{task.current_week}}/{{task.total_week}}</div>
             </div>
           </mat-card>
