--- a/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
+++ b/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
@@ -671,8 +671,38 @@
                           <mat-icon matSuffix>dialpad</mat-icon>
                         </mat-form-field>
                       </ng-container>
+                      <ng-container *ngIf="item.get('typeSelection').value['value'] == 'upc'">
+                        <div fxLayout="column" fxFlex="100">
+                          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+                            <div fxFlex="30">Maksimal UPC Code yang diinput:</div>
+                            <div fxLayout="row" fxFlex="20">
+                              <mat-form-field fxFlex="100" class="question is-light">
+                                <input class="inputUPC" matInput type="number" value="" min="1">
+                              </mat-form-field>
+                            </div>
+                          </div>
+                          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+                            <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
+                            <div fxLayout="row" fxFlex="20">
+                              <mat-form-field fxFlex="100" class="question is-light">
+                                <input class="inputUPC" (keypress)="handleUPC($event)"  matInput type="text" >
+                              </mat-form-field>
+                            </div>
+                          </div>
+                          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+                            <div fxFlex="30">Brand Family:</div>
+                            <div fxLayout="row" fxFlex="20">
+                              <search-product-barcode>
+                                <mat-error *ngIf="templateTaskForm.controls['upcConversionCoin'].hasError('required') && templateTaskForm.controls['upcConversionCoin'].touched">
+                                  Brand Family Harus diisi
+                                </mat-error>
+                              </search-product-barcode>
+                            </div>
+                          </div>
+                        </div>
+                      </ng-container>
                       <ng-container
-                        *ngIf="item.get('typeSelection').value['value'] && item.get('typeSelection').value['value'] !== 'text' && item.get('typeSelection').value['value'] !== 'textarea' && item.get('typeSelection').value['value'] !== 'image' && item.get('typeSelection').value['value'] !== 'numeric' && item.get('typeSelection').value['value'] !== 'date'">
+                        *ngIf="item.get('typeSelection').value['value'] && item.get('typeSelection').value['value'] !== 'text' && item.get('typeSelection').value['value'] !== 'textarea' && item.get('typeSelection').value['value'] !== 'image' && item.get('typeSelection').value['value'] !== 'numeric' && item.get('typeSelection').value['value'] !== 'date' && item.get('typeSelection').value['value'] !== 'upc'">
                         <div fxFlex="100" fxLayout="column">
                           <div *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
                             <div formArrayName="additional"
